# HSC

./: .gitignore  LICENSE  README.md  config.json  pyproject.toml
esm_finetuning/: ESM150M_finetuning_with_HuSC.ipynb  ESM35M_finetuning_with_HuSC.ipynb  ESM650M_finetuning_with_HuSC.ipynb  ESM8M_finetuning_with_HuSC.ipynb
helper_scripts/: add_HSCZ_to_conservation_scores.py  add_HuSC_scores_to_conservation.py  add_hsc_to_clinvar_constraint.py  compare_hsc_esm.py  compute_summary_stats.py  extract_all_scores.py  gene_set_score_extract.py  generate_llrs_for_clinvar.py
hsc/: __init__.py  main.py  main_claude.py  main_final.py  main_final_get_df.py
husc/: __init__.py  main.py
inputs/: shared_file_1.txt  shared_file_10.txt  shared_file_100.txt  shared_file_101.txt  shared_file_102.txt  shared_file_103.txt  shared_file_104.txt  shared_file_105.txt  shared_file_106.txt  shared_file_107.txt  shared_file_108.txt  shared_file_109.txt  shared_file_11.txt  shared_file_110.txt  shared_file_111.txt  shared_file_112.txt  shared_file_113.txt  shared_file_12.txt  shared_file_13.txt  shared_file_14.txt  shared_file_15.txt  shared_file_16.txt  shared_file_17.txt  shared_file_18.txt  shared_file_19.txt  shared_file_2.txt  shared_file_20.txt  shared_file_21.txt  shared_file_22.txt  shared_file_23.txt  shared_file_24.txt  shared_file_25.txt  shared_file_26.txt  shared_file_27.txt  shared_file_28.txt  shared_file_29.txt  shared_file_3.txt  shared_file_30.txt  shared_file_31.txt  shared_file_32.txt  (+698 more)
job_scripts/: clinvar_fragment.sh  fragment_jobs.sh  run_enst_ids.sh
(+4 files in other folders)
